--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timecalc",
-  "productName": "timecalc",
+  "productName": "Time Calc",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
@@ -16,12 +16,15 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "./icon.ico"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "timecalc"
+            "name": "timecalc",
+            "icon": "./icon.ico"
           }
         },
         {
@@ -42,7 +45,8 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "simplebar": "^5.3.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.59",
